# trab-compiladores

./: upload-batch  upload.sh
etapa1/: hash.c  main.c  scanner.l  teste.txt
etapa2/: Makefile  etapa2  hash.h  lex.yy.c  main.c  parser.y  scanner.l  teste.txt  teste2.txt  y.tab.c  y.tab.h
etapa3/: Makefile  ast.c  ast.h  etapa3  generator.c  lex.yy.c  lex.yy.h  main.c  out.txt  parser.y  scanner.l  teste.txt  teste2.txt  y.tab.c  y.tab.h
etapa4/: Makefile  ast.c  ast.h  ex4.txt  hash.c  hash.h  main.c  out.txt  out4.txt  parser.y  scanner.l  semantic.c  semantic.h  test.txt  teste2.txt  testindex.txt  testindexout.txt
etapa5/: Makefile  ex4.txt  generator.h  hash.c  hash.h  lex.yy.c  main.c  out.txt  parser.y  scanner.l  semantic.c  tac.c  tac.h  test.txt  teste.txt  y.tab.c  y.tab.h
etapa6/: Makefile  asmgen.c  asmgen.h  authors  hash.c  out  out.txt  parser.y  t.lang  tac.c  tac.h  test.sh  test.txt  teste.txt  testindex.txt
etapa6.bak/: asmgen.c  asmgen.h  etapa6  hash.h  lex.yy.c  lex.yy.h  main.s  out  out.s  out.txt  out4.txt  parser.y  semantic.c  tac.c  test.sh  test.txt  teste.txt  y.tab.c  y.tab.h
libhash/: CMakeLists.txt
libhash/src/: hash.c  main.c
parts/p1/: Makefile  etapa1  hash.c  hash.h  lex.yy.c  lex.yy.h  main.c  scanner.l  teste.txt
public_html/: etapa1.tgz  etapa2.tgz  etapa3.tgz  etapa4.tgz  etapa5.tgz  etapa6.tgz  index.html
